# m8_t2

./: README.md  config.py  consumer.py  docker-compose.yml  models.py  producer.py  pyproject.toml
